--- a/html/carousel.html
+++ b/html/carousel.html
@@ -13,11 +13,11 @@
     <meta name="keywords" content="API 1000,api1000,jquery api,jqueryapi,vuejs,vue js,vue api,vueapi,boostrapapi,bootstrap api">
     <meta name="description" content="API 1000,api1000,jquery api,jqueryapi,vuejs,vue js,vue api,vueapi,boostrapapi,bootstrap api">
 
-    <link rel="shortcut icon" href="favicon.ico"> <link href="css/bootstrap.min14ed.css?v=3.3.6" rel="stylesheet">
-    <link href="css/font-awesome.min93e3.css?v=4.4.0" rel="stylesheet">
+    <link rel="shortcut icon" href="../favicon.ico"> <link href="../css/bootstrap.min14ed.css?v=3.3.6" rel="stylesheet">
+    <link href="../css/font-awesome.min93e3.css?v=4.4.0" rel="stylesheet">
 
-    <link href="css/animate.min.css" rel="stylesheet">
-    <link href="css/style.min862f.css?v=4.1.0" rel="stylesheet">
+    <link href="../css/animate.min.css" rel="stylesheet">
+    <link href="../css/style.min862f.css?v=4.1.0" rel="stylesheet">
 
 </head>
 
@@ -50,13 +50,13 @@
                         <div class="carousel slide" id="carousel1">
                             <div class="carousel-inner">
                                 <div class="item active">
-                                    <img alt="image" class="img-responsive" src="img/p_big3.jpg">
+                                    <img alt="image" class="img-responsive" src="../img/p_big3.jpg">
                                 </div>
                                 <div class="item">
-                                    <img alt="image" class="img-responsive" src="img/p_big1.jpg">
+                                    <img alt="image" class="img-responsive" src="../img/p_big1.jpg">
                                 </div>
                                 <div class="item ">
-                                    <img alt="image" class="img-responsive" src="img/p_big2.jpg">
+                                    <img alt="image" class="img-responsive" src="../img/p_big2.jpg">
                                 </div>
 
                             </div>
@@ -101,19 +101,19 @@
                             </ol>
                             <div class="carousel-inner">
                                 <div class="item active">
-                                    <img alt="image" class="img-responsive" src="img/p_big1.jpg">
+                                    <img alt="image" class="img-responsive" src="../img/p_big1.jpg">
                                     <div class="carousel-caption">
                                         <p>This is simple caption 1</p>
                                     </div>
                                 </div>
                                 <div class="item ">
-                                    <img alt="image" class="img-responsive" src="img/p_big3.jpg">
+                                    <img alt="image" class="img-responsive" src="../img/p_big3.jpg">
                                     <div class="carousel-caption">
                                         <p>This is simple caption 2</p>
                                     </div>
                                 </div>
                                 <div class="item">
-                                    <img alt="image" class="img-responsive" src="img/p_big2.jpg">
+                                    <img alt="image" class="img-responsive" src="../img/p_big2.jpg">
                                     <div class="carousel-caption">
                                         <p>This is simple caption 3</p>
                                     </div>
@@ -160,48 +160,48 @@
                                 <div class="item gallery active left">
                                     <div class="row">
                                         <div class="col-sm-6">
-                                            <img alt="image" class="img-responsive" src="img/p_big1.jpg">
+                                            <img alt="image" class="img-responsive" src="../img/p_big1.jpg">
                                         </div>
                                         <div class="col-sm-6">
-                                            <img alt="image" class="img-responsive" src="img/p_big2.jpg">
+                                            <img alt="image" class="img-responsive" src="../img/p_big2.jpg">
                                         </div>
                                         <div class="col-sm-6">
-                                            <img alt="image" class="img-responsive" src="img/p_big3.jpg">
+                                            <img alt="image" class="img-responsive" src="../img/p_big3.jpg">
                                         </div>
                                         <div class="col-sm-6">
-                                            <img alt="image" class="img-responsive" src="img/p_big1.jpg">
+                                            <img alt="image" class="img-responsive" src="../img/p_big1.jpg">
                                         </div>
                                     </div>
                                 </div>
                                 <div class="item gallery next left">
                                     <div class="row">
                                         <div class="col-sm-6">
-                                            <img alt="image" class="img-responsive" src="img/p_big3.jpg">
+                                            <img alt="image" class="img-responsive" src="../img/p_big3.jpg">
                                         </div>
                                         <div class="col-sm-6">
-                                            <img alt="image" class="img-responsive" src="img/p_big1.jpg">
+                                            <img alt="image" class="img-responsive" src="../img/p_big1.jpg">
                                         </div>
                                         <div class="col-sm-6">
-                                            <img alt="image" class="img-responsive" src="img/p_big2.jpg">
+                                            <img alt="image" class="img-responsive" src="../img/p_big2.jpg">
                                         </div>
                                         <div class="col-sm-6">
-                                            <img alt="image" class="img-responsive" src="img/p_big1.jpg">
+                                            <img alt="image" class="img-responsive" src="../img/p_big1.jpg">
                                         </div>
                                     </div>
                                 </div>
                                 <div class="item gallery">
                                     <div class="row">
                                         <div class="col-sm-6">
-                                            <img alt="image" class="img-responsive" src="img/p_big2.jpg">
+                                            <img alt="image" class="img-responsive" src="../img/p_big2.jpg">
                                         </div>
                                         <div class="col-sm-6">
-                                            <img alt="image" class="img-responsive" src="img/p_big3.jpg">
+                                            <img alt="image" class="img-responsive" src="../img/p_big3.jpg">
                                         </div>
                                         <div class="col-sm-6">
-                                            <img alt="image" class="img-responsive" src="img/p_big1.jpg">
+                                            <img alt="image" class="img-responsive" src="../img/p_big1.jpg">
                                         </div>
                                         <div class="col-sm-6">
-                                            <img alt="image" class="img-responsive" src="img/p_big2.jpg">
+                                            <img alt="image" class="img-responsive" src="../img/p_big2.jpg">
                                         </div>
                                     </div>
                                 </div>
@@ -218,9 +218,9 @@
             </div>
         </div>
     </div>
-    <script src="js/jquery.min.js?v=2.1.4"></script>
-    <script src="js/bootstrap.min.js?v=3.3.6"></script>
-    <script src="js/content.min.js?v=1.0.0"></script>
+    <script src="../js/jquery.min.js?v=2.1.4"></script>
+    <script src="../js/bootstrap.min.js?v=3.3.6"></script>
+    <script src="../js/content.min.js?v=1.0.0"></script>
     <script type="text/javascript" src="http://tajs.qq.com/stats?sId=9051096" charset="UTF-8"></script>
 </body>
 
