--- a/html/500.html
+++ b/html/500.html
@@ -13,11 +13,11 @@
     <meta name="keywords" content="API 1000,api1000,jquery api,jqueryapi,vuejs,vue js,vue api,vueapi,boostrapapi,bootstrap api">
     <meta name="description" content="API 1000,api1000,jquery api,jqueryapi,vuejs,vue js,vue api,vueapi,boostrapapi,bootstrap api">
 
-    <link rel="shortcut icon" href="favicon.ico"> <link href="css/bootstrap.min14ed.css?v=3.3.6" rel="stylesheet">
-    <link href="css/font-awesome.min93e3.css?v=4.4.0" rel="stylesheet">
+    <link rel="shortcut icon" href="../favicon.ico"> <link href="../css/bootstrap.min14ed.css?v=3.3.6" rel="stylesheet">
+    <link href="../css/font-awesome.min93e3.css?v=4.4.0" rel="stylesheet">
 
-    <link href="css/animate.min.css" rel="stylesheet">
-    <link href="css/style.min862f.css?v=4.1.0" rel="stylesheet">
+    <link href="../css/animate.min.css" rel="stylesheet">
+    <link href="../css/style.min862f.css?v=4.1.0" rel="stylesheet">
 
 </head>
 
@@ -29,11 +29,11 @@
         <div class="error-desc">
             服务器好像出错了...
             <br/>您可以返回主页看看
-            <br/><a href="index-2.html" class="btn btn-primary m-t">主页</a>
+            <br/><a href="../index-2.html" class="btn btn-primary m-t">主页</a>
         </div>
     </div>
-    <script src="js/jquery.min.js?v=2.1.4"></script>
-    <script src="js/bootstrap.min.js?v=3.3.6"></script>
+    <script src="../js/jquery.min.js?v=2.1.4"></script>
+    <script src="../js/bootstrap.min.js?v=3.3.6"></script>
     <script type="text/javascript" src="http://tajs.qq.com/stats?sId=9051096" charset="UTF-8"></script>
 </body>
 
