--- a/html/chat_view.html
+++ b/html/chat_view.html
@@ -14,11 +14,11 @@
     <meta name="keywords" content="API 1000,api1000,jquery api,jqueryapi,vuejs,vue js,vue api,vueapi,boostrapapi,bootstrap api">
     <meta name="description" content="API 1000,api1000,jquery api,jqueryapi,vuejs,vue js,vue api,vueapi,boostrapapi,bootstrap api">
 
-    <link rel="shortcut icon" href="favicon.ico"> <link href="css/bootstrap.min14ed.css?v=3.3.6" rel="stylesheet">
-    <link href="css/font-awesome.min93e3.css?v=4.4.0" rel="stylesheet">
-    <link href="css/plugins/jsTree/style.min.css" rel="stylesheet">
-    <link href="css/animate.min.css" rel="stylesheet">
-    <link href="css/style.min862f.css?v=4.1.0" rel="stylesheet">
+    <link rel="shortcut icon" href="../favicon.ico"> <link href="../css/bootstrap.min14ed.css?v=3.3.6" rel="stylesheet">
+    <link href="../css/font-awesome.min93e3.css?v=4.4.0" rel="stylesheet">
+    <link href="../css/plugins/jsTree/style.min.css" rel="stylesheet">
+    <link href="../css/animate.min.css" rel="stylesheet">
+    <link href="../css/style.min862f.css?v=4.1.0" rel="stylesheet">
 
 </head>
 
@@ -43,7 +43,7 @@
                                 <div class="chat-discussion">
 
                                     <div class="chat-message">
-                                        <img class="message-avatar" src="img/a1.jpg" alt="">
+                                        <img class="message-avatar" src="../img/a1.jpg" alt="">
                                         <div class="message">
                                             <a class="message-author" href="#"> 颜文字君</a>
                                             <span class="message-date"> 2015-02-02 18:39:23 </span>
@@ -53,7 +53,7 @@
                                         </div>
                                     </div>
                                     <div class="chat-message">
-                                        <img class="message-avatar" src="img/a4.jpg" alt="">
+                                        <img class="message-avatar" src="../img/a4.jpg" alt="">
                                         <div class="message">
                                             <a class="message-author" href="#"> 林依晨Ariel </a>
                                             <span class="message-date">  2015-02-02 11:12:36 </span>
@@ -63,7 +63,7 @@
                                         </div>
                                     </div>
                                     <div class="chat-message">
-                                        <img class="message-avatar" src="img/a2.jpg" alt="">
+                                        <img class="message-avatar" src="../img/a2.jpg" alt="">
                                         <div class="message">
                                             <a class="message-author" href="#"> 谨斯里 </a>
                                             <span class="message-date">  2015-02-02 11:12:36 </span>
@@ -73,7 +73,7 @@
                                         </div>
                                     </div>
                                     <div class="chat-message">
-                                        <img class="message-avatar" src="img/a5.jpg" alt="">
+                                        <img class="message-avatar" src="../img/a5.jpg" alt="">
                                         <div class="message">
                                             <a class="message-author" href="#"> 林依晨Ariel </a>
                                             <span class="message-date">  2015-02-02 - 11:12:36 </span>
@@ -83,7 +83,7 @@
                                         </div>
                                     </div>
                                     <div class="chat-message">
-                                        <img class="message-avatar" src="img/a6.jpg" alt="">
+                                        <img class="message-avatar" src="../img/a6.jpg" alt="">
                                         <div class="message">
                                             <a class="message-author" href="#"> 林依晨Ariel </a>
                                             <span class="message-date">  2015-02-02 11:12:36 </span>
@@ -103,52 +103,52 @@
 
                                     <div class="users-list">
                                         <div class="chat-user">
-                                            <img class="chat-avatar" src="img/a4.jpg" alt="">
+                                            <img class="chat-avatar" src="../img/a4.jpg" alt="">
                                             <div class="chat-user-name">
                                                 <a href="#">伤城Simple</a>
                                             </div>
                                         </div>
                                         <div class="chat-user">
-                                            <img class="chat-avatar" src="img/a1.jpg" alt="">
+                                            <img class="chat-avatar" src="../img/a1.jpg" alt="">
                                             <div class="chat-user-name">
                                                 <a href="#">从未出现过的风景__</a>
                                             </div>
                                         </div>
                                         <div class="chat-user">
                                             <span class="pull-right label label-primary">在线</span>
-                                            <img class="chat-avatar" src="img/a2.jpg" alt="">
+                                            <img class="chat-avatar" src="../img/a2.jpg" alt="">
                                             <div class="chat-user-name">
                                                 <a href="#">冬伴花暖</a>
                                             </div>
                                         </div>
                                         <div class="chat-user">
                                             <span class="pull-right label label-primary">在线</span>
-                                            <img class="chat-avatar" src="img/a3.jpg" alt="">
+                                            <img class="chat-avatar" src="../img/a3.jpg" alt="">
                                             <div class="chat-user-name">
                                                 <a href="#">ZM敏姑娘	</a>
                                             </div>
                                         </div>
                                         <div class="chat-user">
-                                            <img class="chat-avatar" src="img/a5.jpg" alt="">
+                                            <img class="chat-avatar" src="../img/a5.jpg" alt="">
                                             <div class="chat-user-name">
                                                 <a href="#">才越越</a>
                                             </div>
                                         </div>
                                         <div class="chat-user">
-                                            <img class="chat-avatar" src="img/a6.jpg" alt="">
+                                            <img class="chat-avatar" src="../img/a6.jpg" alt="">
                                             <div class="chat-user-name">
                                                 <a href="#">时光十年TENSHI</a>
                                             </div>
                                         </div>
                                         <div class="chat-user">
-                                            <img class="chat-avatar" src="img/a2.jpg" alt="">
+                                            <img class="chat-avatar" src="../img/a2.jpg" alt="">
                                             <div class="chat-user-name">
                                                 <a href="#">刘顰颖</a>
                                             </div>
                                         </div>
                                         <div class="chat-user">
                                             <span class="pull-right label label-primary">在线</span>
-                                            <img class="chat-avatar" src="img/a3.jpg" alt="">
+                                            <img class="chat-avatar" src="../img/a3.jpg" alt="">
                                             <div class="chat-user-name">
                                                 <a href="#">陈泳儿SccBaby</a>
                                             </div>
@@ -178,9 +178,9 @@
             </div>
         </div>
     </div>
-    <script src="js/jquery.min.js?v=2.1.4"></script>
-    <script src="js/bootstrap.min.js?v=3.3.6"></script>
-    <script src="js/content.min.js?v=1.0.0"></script>
+    <script src="../js/jquery.min.js?v=2.1.4"></script>
+    <script src="../js/bootstrap.min.js?v=3.3.6"></script>
+    <script src="../js/content.min.js?v=1.0.0"></script>
     <script type="text/javascript" src="http://tajs.qq.com/stats?sId=9051096" charset="UTF-8"></script>
 </body>
 
