--- a/index-2.html
+++ b/index-2.html
@@ -159,7 +159,7 @@
                                     </li>
                                     <li><a class="J_menuItem" href="form_markdown.html">MarkDown编辑器</a>
                                     </li>
-                                    <li><a class="J_menuItem" href="code_editor.html">代码编辑器</a>
+                                    <li><a class="J_menuItem" href="html/code_editor.html">代码编辑器</a>
                                     </li>
                                 </ul>
                             </li>
@@ -189,18 +189,18 @@
                             </li>
                             <li><a class="J_menuItem" href="social_feed.html">信息流</a>
                             </li>
-                            <li><a class="J_menuItem" href="clients.html">客户管理</a>
+                            <li><a class="J_menuItem" href="html/clients.html">客户管理</a>
                             </li>
                             <li><a class="J_menuItem" href="file_manager.html">文件管理器</a>
                             </li>
-                            <li><a class="J_menuItem" href="calendar.html">日历</a>
+                            <li><a class="J_menuItem" href="html/calendar.html">日历</a>
                             </li>
                             <li>
                                 <a href="#">博客 <span class="fa arrow"></span></a>
                                 <ul class="nav nav-third-level">
-                                    <li><a class="J_menuItem" href="blog.html">文章列表</a>
+                                    <li><a class="J_menuItem" href="html/blog.html">文章列表</a>
                                     </li>
-                                    <li><a class="J_menuItem" href="article.html">文章详情</a>
+                                    <li><a class="J_menuItem" href="html/article.html">文章详情</a>
                                     </li>
                                 </ul>
                             </li>
@@ -233,7 +233,7 @@
                             <li>
                                 <a href="#">即时通讯 <span class="fa arrow"></span></a>
                                 <ul class="nav nav-third-level">
-                                    <li><a class="J_menuItem" href="chat_view.html">聊天窗口</a>
+                                    <li><a class="J_menuItem" href="html/chat_view.html">聊天窗口</a>
                                     </li>
                                     <li><a class="J_menuItem" href="webim.html">layIM</a>
                                     </li>
@@ -252,9 +252,9 @@
                                     </li>
                                 </ul>
                             </li>
-                            <li><a class="J_menuItem" href="404.html">404页面</a>
+                            <li><a class="J_menuItem" href="html/404.html">404页面</a>
                             </li>
-                            <li><a class="J_menuItem" href="500.html">500页面</a>
+                            <li><a class="J_menuItem" href="html/500.html">500页面</a>
                             </li>
                             <li><a class="J_menuItem" href="empty_page.html">空白页</a>
                             </li>
@@ -284,17 +284,17 @@
                                 <ul class="nav nav-third-level">
                                     <li><a class="J_menuItem" href="draggable_panels.html">拖动面板</a>
                                     </li>
-                                    <li><a class="J_menuItem" href="agile_board.html">任务清单</a>
+                                    <li><a class="J_menuItem" href="html/agile_board.html">任务清单</a>
                                     </li>
                                 </ul>
                             </li>
-                            <li><a class="J_menuItem" href="buttons.html">按钮</a>
+                            <li><a class="J_menuItem" href="html/buttons.html">按钮</a>
                             </li>
                             <li><a class="J_menuItem" href="tabs_panels.html">选项卡 &amp; 面板</a>
                             </li>
                             <li><a class="J_menuItem" href="notifications.html">通知 &amp; 提示</a>
                             </li>
-                            <li><a class="J_menuItem" href="badges_labels.html">徽章，标签，进度条</a>
+                            <li><a class="J_menuItem" href="html/badges_labels.html">徽章，标签，进度条</a>
                             </li>
                             <li>
                                 <a class="J_menuItem" href="grid_options.html">栅格</a>
@@ -352,11 +352,11 @@
                     <li>
                         <a href="#"><i class="fa fa-picture-o"></i> <span class="nav-label">相册</span><span class="fa arrow"></span></a>
                         <ul class="nav nav-second-level">
-                            <li><a class="J_menuItem" href="basic_gallery.html">基本图库</a>
+                            <li><a class="J_menuItem" href="html/basic_gallery.html">基本图库</a>
                             </li>
-                            <li><a class="J_menuItem" href="carousel.html">图片切换</a>
+                            <li><a class="J_menuItem" href="html/carousel.html">图片切换</a>
                             </li>
-                            <li><a class="J_menuItem" href="blueimp.html">Blueimp相册</a>
+                            <li><a class="J_menuItem" href="html/blueimp.html">Blueimp相册</a>
                             </li>
                         </ul>
                     </li>
