--- a/suggest.html
+++ b/suggest.html
@@ -32,13 +32,13 @@
                             <a class="collapse-link">
                                 <i class="fa fa-chevron-up"></i>
                             </a>
-                            <a class="dropdown-toggle" data-toggle="dropdown" href="buttons.html#">
+                            <a class="dropdown-toggle" data-toggle="dropdown" href="html/buttons.html#">
                                 <i class="fa fa-wrench"></i>
                             </a>
                             <ul class="dropdown-menu dropdown-user">
-                                <li><a href="buttons.html#">选项1</a>
+                                <li><a href="html/buttons.html#">选项1</a>
                                 </li>
-                                <li><a href="buttons.html#">选项2</a>
+                                <li><a href="html/buttons.html#">选项2</a>
                                 </li>
                             </ul>
                             <a class="close-link">
@@ -154,13 +154,13 @@
                             <a class="collapse-link">
                                 <i class="fa fa-chevron-up"></i>
                             </a>
-                            <a class="dropdown-toggle" data-toggle="dropdown" href="buttons.html#">
+                            <a class="dropdown-toggle" data-toggle="dropdown" href="html/buttons.html#">
                                 <i class="fa fa-wrench"></i>
                             </a>
                             <ul class="dropdown-menu dropdown-user">
-                                <li><a href="buttons.html#">选项1</a>
+                                <li><a href="html/buttons.html#">选项1</a>
                                 </li>
-                                <li><a href="buttons.html#">选项2</a>
+                                <li><a href="html/buttons.html#">选项2</a>
                                 </li>
                             </ul>
                             <a class="close-link">
