--- a/calendar.html
+++ b/calendar.html
@@ -13,16 +13,16 @@
     <meta name="keywords" content="API 1000,api1000,jquery api,jqueryapi,vuejs,vue js,vue api,vueapi,boostrapapi,bootstrap api">
     <meta name="description" content="API 1000,api1000,jquery api,jqueryapi,vuejs,vue js,vue api,vueapi,boostrapapi,bootstrap api">
 
-    <link rel="shortcut icon" href="../favicon.ico"> <link href="../css/bootstrap.min14ed.css?v=3.3.6" rel="stylesheet">
-    <link href="../css/font-awesome.min93e3.css?v=4.4.0" rel="stylesheet">
+    <link rel="shortcut icon" href="favicon.ico"> <link href="css/bootstrap.min14ed.css?v=3.3.6" rel="stylesheet">
+    <link href="css/font-awesome.min93e3.css?v=4.4.0" rel="stylesheet">
 
-    <link href="../css/plugins/iCheck/custom.css" rel="stylesheet">
+    <link href="css/plugins/iCheck/custom.css" rel="stylesheet">
 
-    <link href="../css/plugins/fullcalendar/fullcalendar.css" rel="stylesheet">
-    <link href="../css/plugins/fullcalendar/fullcalendar.print.css" rel="stylesheet">
+    <link href="css/plugins/fullcalendar/fullcalendar.css" rel="stylesheet">
+    <link href="css/plugins/fullcalendar/fullcalendar.print.css" rel="stylesheet">
 
-    <link href="../css/animate.min.css" rel="stylesheet">
-    <link href="../css/style.min862f.css?v=4.1.0" rel="stylesheet">
+    <link href="css/animate.min.css" rel="stylesheet">
+    <link href="css/style.min862f.css?v=4.1.0" rel="stylesheet">
 
 </head>
 
@@ -104,12 +104,12 @@
         </div>
     </div>
 
-    <script src="../js/jquery.min.js?v=2.1.4"></script>
-    <script src="../js/bootstrap.min.js?v=3.3.6"></script>
-    <script src="../js/content.min.js?v=1.0.0"></script>
-    <script src="../js/jquery-ui.custom.min.js"></script>
-    <script src="../js/plugins/iCheck/icheck.min.js"></script>
-    <script src="../js/plugins/fullcalendar/fullcalendar.min.js"></script>
+    <script src="js/jquery.min.js?v=2.1.4"></script>
+    <script src="js/bootstrap.min.js?v=3.3.6"></script>
+    <script src="js/content.min.js?v=1.0.0"></script>
+    <script src="js/jquery-ui.custom.min.js"></script>
+    <script src="js/plugins/iCheck/icheck.min.js"></script>
+    <script src="js/plugins/fullcalendar/fullcalendar.min.js"></script>
     <script>
         $(document).ready(function(){$(".i-checks").iCheck({checkboxClass:"icheckbox_square-green",radioClass:"iradio_square-green",});$("#external-events div.external-event").each(function(){var d={title:$.trim($(this).text())};$(this).data("eventObject",d);$(this).draggable({zIndex:999,revert:true,revertDuration:0})});var b=new Date();var c=b.getDate();var a=b.getMonth();var e=b.getFullYear();$("#calendar").fullCalendar({header:{left:"prev,next",center:"title",right:"month,agendaWeek,agendaDay"},editable:true,droppable:true,drop:function(g,h){var f=$(this).data("eventObject");var d=$.extend({},f);d.start=g;d.allDay=h;$("#calendar").fullCalendar("renderEvent",d,true);if($("#drop-remove").is(":checked")){$(this).remove()}},events:[{title:"日事件",start:new Date(e,a,1)},{title:"长事件",start:new Date(e,a,c-5),end:new Date(e,a,c-2),},{id:999,title:"重复事件",start:new Date(e,a,c-3,16,0),allDay:false,},{id:999,title:"重复事件",start:new Date(e,a,c+4,16,0),allDay:false},{title:"会议",start:new Date(e,a,c,10,30),allDay:false},{title:"午餐",start:new Date(e,a,c,12,0),end:new Date(e,a,c,14,0),allDay:false},{title:"生日",start:new Date(e,a,c+1,19,0),end:new Date(e,a,c+1,22,30),allDay:false},{title:"打开百度",start:new Date(e,a,28),end:new Date(e,a,29),url:"http://baidu.com/"}],})});
     </script>
