--- a/tree_view.html
+++ b/tree_view.html
@@ -32,13 +32,13 @@
                         <a class="collapse-link">
                             <i class="fa fa-chevron-up"></i>
                         </a>
-                        <a class="dropdown-toggle" data-toggle="dropdown" href="html/buttons.html#">
+                        <a class="dropdown-toggle" data-toggle="dropdown" href="buttons.html#">
                             <i class="fa fa-wrench"></i>
                         </a>
                         <ul class="dropdown-menu dropdown-user">
-                            <li><a href="html/buttons.html#">选项1</a>
+                            <li><a href="buttons.html#">选项1</a>
                             </li>
-                            <li><a href="html/buttons.html#">选项2</a>
+                            <li><a href="buttons.html#">选项2</a>
                             </li>
                         </ul>
                         <a class="close-link">
@@ -61,13 +61,13 @@
                         <a class="collapse-link">
                             <i class="fa fa-chevron-up"></i>
                         </a>
-                        <a class="dropdown-toggle" data-toggle="dropdown" href="html/buttons.html#">
+                        <a class="dropdown-toggle" data-toggle="dropdown" href="buttons.html#">
                             <i class="fa fa-wrench"></i>
                         </a>
                         <ul class="dropdown-menu dropdown-user">
-                            <li><a href="html/buttons.html#">选项1</a>
+                            <li><a href="buttons.html#">选项1</a>
                             </li>
-                            <li><a href="html/buttons.html#">选项2</a>
+                            <li><a href="buttons.html#">选项2</a>
                             </li>
                         </ul>
                         <a class="close-link">
@@ -88,13 +88,13 @@
                         <a class="collapse-link">
                             <i class="fa fa-chevron-up"></i>
                         </a>
-                        <a class="dropdown-toggle" data-toggle="dropdown" href="html/buttons.html#">
+                        <a class="dropdown-toggle" data-toggle="dropdown" href="buttons.html#">
                             <i class="fa fa-wrench"></i>
                         </a>
                         <ul class="dropdown-menu dropdown-user">
-                            <li><a href="html/buttons.html#">选项1</a>
+                            <li><a href="buttons.html#">选项1</a>
                             </li>
-                            <li><a href="html/buttons.html#">选项2</a>
+                            <li><a href="buttons.html#">选项2</a>
                             </li>
                         </ul>
                         <a class="close-link">
@@ -115,13 +115,13 @@
                         <a class="collapse-link">
                             <i class="fa fa-chevron-up"></i>
                         </a>
-                        <a class="dropdown-toggle" data-toggle="dropdown" href="html/buttons.html#">
+                        <a class="dropdown-toggle" data-toggle="dropdown" href="buttons.html#">
                             <i class="fa fa-wrench"></i>
                         </a>
                         <ul class="dropdown-menu dropdown-user">
-                            <li><a href="html/buttons.html#">选项1</a>
+                            <li><a href="buttons.html#">选项1</a>
                             </li>
-                            <li><a href="html/buttons.html#">选项2</a>
+                            <li><a href="buttons.html#">选项2</a>
                             </li>
                         </ul>
                         <a class="close-link">
@@ -142,13 +142,13 @@
                         <a class="collapse-link">
                             <i class="fa fa-chevron-up"></i>
                         </a>
-                        <a class="dropdown-toggle" data-toggle="dropdown" href="html/buttons.html#">
+                        <a class="dropdown-toggle" data-toggle="dropdown" href="buttons.html#">
                             <i class="fa fa-wrench"></i>
                         </a>
                         <ul class="dropdown-menu dropdown-user">
-                            <li><a href="html/buttons.html#">选项1</a>
+                            <li><a href="buttons.html#">选项1</a>
                             </li>
-                            <li><a href="html/buttons.html#">选项2</a>
+                            <li><a href="buttons.html#">选项2</a>
                             </li>
                         </ul>
                         <a class="close-link">
@@ -169,13 +169,13 @@
                         <a class="collapse-link">
                             <i class="fa fa-chevron-up"></i>
                         </a>
-                        <a class="dropdown-toggle" data-toggle="dropdown" href="html/buttons.html#">
+                        <a class="dropdown-toggle" data-toggle="dropdown" href="buttons.html#">
                             <i class="fa fa-wrench"></i>
                         </a>
                         <ul class="dropdown-menu dropdown-user">
-                            <li><a href="html/buttons.html#">选项1</a>
+                            <li><a href="buttons.html#">选项1</a>
                             </li>
-                            <li><a href="html/buttons.html#">选项2</a>
+                            <li><a href="buttons.html#">选项2</a>
                             </li>
                         </ul>
                         <a class="close-link">
@@ -196,13 +196,13 @@
                         <a class="collapse-link">
                             <i class="fa fa-chevron-up"></i>
                         </a>
-                        <a class="dropdown-toggle" data-toggle="dropdown" href="html/buttons.html#">
+                        <a class="dropdown-toggle" data-toggle="dropdown" href="buttons.html#">
                             <i class="fa fa-wrench"></i>
                         </a>
                         <ul class="dropdown-menu dropdown-user">
-                            <li><a href="html/buttons.html#">选项1</a>
+                            <li><a href="buttons.html#">选项1</a>
                             </li>
-                            <li><a href="html/buttons.html#">选项2</a>
+                            <li><a href="buttons.html#">选项2</a>
                             </li>
                         </ul>
                         <a class="close-link">
@@ -223,13 +223,13 @@
                         <a class="collapse-link">
                             <i class="fa fa-chevron-up"></i>
                         </a>
-                        <a class="dropdown-toggle" data-toggle="dropdown" href="html/buttons.html#">
+                        <a class="dropdown-toggle" data-toggle="dropdown" href="buttons.html#">
                             <i class="fa fa-wrench"></i>
                         </a>
                         <ul class="dropdown-menu dropdown-user">
-                            <li><a href="html/buttons.html#">选项1</a>
+                            <li><a href="buttons.html#">选项1</a>
                             </li>
-                            <li><a href="html/buttons.html#">选项2</a>
+                            <li><a href="buttons.html#">选项2</a>
                             </li>
                         </ul>
                         <a class="close-link">
@@ -250,13 +250,13 @@
                         <a class="collapse-link">
                             <i class="fa fa-chevron-up"></i>
                         </a>
-                        <a class="dropdown-toggle" data-toggle="dropdown" href="html/buttons.html#">
+                        <a class="dropdown-toggle" data-toggle="dropdown" href="buttons.html#">
                             <i class="fa fa-wrench"></i>
                         </a>
                         <ul class="dropdown-menu dropdown-user">
-                            <li><a href="html/buttons.html#">选项1</a>
+                            <li><a href="buttons.html#">选项1</a>
                             </li>
-                            <li><a href="html/buttons.html#">选项2</a>
+                            <li><a href="buttons.html#">选项2</a>
                             </li>
                         </ul>
                         <a class="close-link">
@@ -277,13 +277,13 @@
                         <a class="collapse-link">
                             <i class="fa fa-chevron-up"></i>
                         </a>
-                        <a class="dropdown-toggle" data-toggle="dropdown" href="html/buttons.html#">
+                        <a class="dropdown-toggle" data-toggle="dropdown" href="buttons.html#">
                             <i class="fa fa-wrench"></i>
                         </a>
                         <ul class="dropdown-menu dropdown-user">
-                            <li><a href="html/buttons.html#">选项1</a>
+                            <li><a href="buttons.html#">选项1</a>
                             </li>
-                            <li><a href="html/buttons.html#">选项2</a>
+                            <li><a href="buttons.html#">选项2</a>
                             </li>
                         </ul>
                         <a class="close-link">
@@ -304,13 +304,13 @@
                         <a class="collapse-link">
                             <i class="fa fa-chevron-up"></i>
                         </a>
-                        <a class="dropdown-toggle" data-toggle="dropdown" href="html/buttons.html#">
+                        <a class="dropdown-toggle" data-toggle="dropdown" href="buttons.html#">
                             <i class="fa fa-wrench"></i>
                         </a>
                         <ul class="dropdown-menu dropdown-user">
-                            <li><a href="html/buttons.html#">选项1</a>
+                            <li><a href="buttons.html#">选项1</a>
                             </li>
-                            <li><a href="html/buttons.html#">选项2</a>
+                            <li><a href="buttons.html#">选项2</a>
                             </li>
                         </ul>
                         <a class="close-link">
@@ -331,13 +331,13 @@
                         <a class="collapse-link">
                             <i class="fa fa-chevron-up"></i>
                         </a>
-                        <a class="dropdown-toggle" data-toggle="dropdown" href="html/buttons.html#">
+                        <a class="dropdown-toggle" data-toggle="dropdown" href="buttons.html#">
                             <i class="fa fa-wrench"></i>
                         </a>
                         <ul class="dropdown-menu dropdown-user">
-                            <li><a href="html/buttons.html#">选项1</a>
+                            <li><a href="buttons.html#">选项1</a>
                             </li>
-                            <li><a href="html/buttons.html#">选项2</a>
+                            <li><a href="buttons.html#">选项2</a>
                             </li>
                         </ul>
                         <a class="close-link">
@@ -366,13 +366,13 @@
                         <a class="collapse-link">
                             <i class="fa fa-chevron-up"></i>
                         </a>
-                        <a class="dropdown-toggle" data-toggle="dropdown" href="html/buttons.html#">
+                        <a class="dropdown-toggle" data-toggle="dropdown" href="buttons.html#">
                             <i class="fa fa-wrench"></i>
                         </a>
                         <ul class="dropdown-menu dropdown-user">
-                            <li><a href="html/buttons.html#">选项1</a>
+                            <li><a href="buttons.html#">选项1</a>
                             </li>
-                            <li><a href="html/buttons.html#">选项2</a>
+                            <li><a href="buttons.html#">选项2</a>
                             </li>
                         </ul>
                         <a class="close-link">
