--- a/vueapi/Vue_jiesao.html
+++ b/vueapi/Vue_jiesao.html
@@ -460,7 +460,7 @@ var app7 = new Vue({
         </script>
 
         <!-- search -->
-        <link href="./vue_jiesao/docsearch.min.css" rel="stylesheet" type="text/css">
+      <!--  <link href="./vue_jiesao/docsearch.min.css" rel="stylesheet" type="text/css">
         <link rel="stylesheet" href="./vue_jiesao/search.css">
         <script src="vue_jiesao/docsearch.min.js"></script>
         <script>
@@ -480,15 +480,7 @@ var app7 = new Vue({
             algoliaOptions: { facetFilters: ["version:" + version] }
           })
         })
-        </script>
-
-        <!-- fastclick -->
-        <script src="vue_jiesao/fastclick.min.js"></script>
-        <script>
-        document.addEventListener('DOMContentLoaded', function() {
-          FastClick.attach(document.body)
-        }, false)
-        </script>
+        </script>-->
 
 
 </body></html>
