--- a/vueapi/Vue.js.html
+++ b/vueapi/Vue.js.html
@@ -15,12 +15,12 @@
         <meta name="twitter:description" content="Vue.js - Intuitive, Fast and Composable MVVM for building interactive interfaces.">
         <meta name="twitter:image" content="https://cn.vuejs.org/images/logo.png">
 
-        <link rel="icon" href="./vueapi/logo.png" type="image/x-icon">
+        <link rel="icon" href="vueapi/logo.png" type="image/x-icon">
 
         <!-- <link href='//fonts.googleapis.com/css?family=Source+Sans+Pro:300,400,600|Roboto Mono' rel='stylesheet' type='text/css'> -->
 
         <!-- main page styles -->
-        <link rel="stylesheet" href="./vueapi/page.css">
+        <link rel="stylesheet" href="vueapi/page.css">
 
         <!-- this needs to be loaded before guide's inline scripts -->
         <script async="" src="vueapi/analytics.js"></script><script src="vueapi/vue.js"></script>
@@ -32,12 +32,12 @@
         </div>
         <div id="header">
   <a id="logo" href="http://www.api1000.com/">
-    <img src="./vueapi/logo.png">
+    <img src="vueapi/logo.png">
     <span>Vue.js</span>
   </a>
   <ul id="nav">
     <li>
-        <form id="search-form">
+      <!--  <form id="search-form">
             <span class="algolia-autocomplete" style="position: relative; display: inline-block; direction: ltr;"><input
                     type="text" id="search-query-nav" class="search-query st-default-search-input aa-input"
                     autocomplete="off" spellcheck="false" role="combobox" aria-autocomplete="list" aria-expanded="false"
@@ -47,7 +47,7 @@
                     class="aa-dropdown-menu" role="listbox" id="algolia-autocomplete-listbox-0"
                     style="position: absolute; top: 100%; z-index: 100; display: none; left: 0px; right: auto;"><div
                     class="aa-dataset-1"></div></span></span>
-        </form>
+        </form>-->
 </li>
 <li><a href="Vue_jiesao.html" class="nav-link">教程</a></li>
 <li><a href="Vue.js.html" class="nav-link current">API</a></li>
@@ -3448,8 +3448,8 @@
         </script>
 
         <!-- search -->
-        <link href="./vueapi/docsearch.min.css" rel="stylesheet" type="text/css">
-        <link rel="stylesheet" href="./vueapi/search.css">
+       <!-- <link href="vueapi/docsearch.min.css" rel="stylesheet" type="text/css">
+        <link rel="stylesheet" href="vueapi/search.css">
         <script src="vueapi/docsearch.min.js"></script>
         <script>
         [
@@ -3470,13 +3470,13 @@
         })
         </script>
 
-        <!-- fastclick -->
+        &lt;!&ndash; fastclick &ndash;&gt;
         <script src="vueapi/fastclick.min.js"></script>
         <script>
         document.addEventListener('DOMContentLoaded', function() {
           FastClick.attach(document.body)
         }, false)
-        </script>
+        </script>-->
 
 
 </body></html>
